image updates + restructuring of header

--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta lang="en-US">
     <title>Han Castanedo</title>
-    <link href="https://hancastanedo.com/css/main.css" rel="stylesheet">
+    <!--<link href="https://hancastanedo.com/css/main.css" rel="stylesheet">-->
+    <link href="css/main.css" rel="stylesheet">
+    <link href="//cloud.typenetwork.com/projects/2953/fontface.css/" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
@@ -24,8 +26,8 @@
     </header>
     <section class="portfolio-container box_1">
             <div class="portfolio-title">
-              <div class="item home"><em>·</em></div>
-              <div class="number">1/8</div>
+              <div class="item"><h1>hello!</h1></div>
+              <div class="number"><h1>1/8</h1></div>
               </div>
             </div>
             <div class="marquee">
@@ -35,47 +37,43 @@
             <h2>Push, Often.</h2>
             <p>Below are select samples of recent works. Each one was made with the intent of pushing creative boundaries and learning along the way. I'm always pushing code or pixels, often.
             </p>
-            <h6 class="mobile-disc">For more interactive features, please view this website on desktop devices.</h6>
           </div>
           <div class="scrl-ind"></div>
         </section>
     <section class="portfolio-container box_2">
         <div class="portfolio-title">
-          <div class="item haenyo"></div>
-          <div class="number">2/8</div>
+          <div class="item"><h1>haenyo</h1></div>
+          <div class="number"><h1>2/8</h1></div>
         </div>
         </div>
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/haenyo/haenyo_cafeandamiro_2.png">
-          <img class="img two" src="https://hancastanedo.com/assets/haenyo/Haenyo_Menu_andamiro_2.png">
-          <img class="img three" src="https://hancastanedo.com/assets/haenyo/Haenyo-KoRYEan.png">
-          <img class="img four" src="https://hancastanedo.com/assets/haenyo/Haenyo_Menu_rye.png">
-          <img class="img five" src="https://hancastanedo.com/assets/haenyo/haenyo_themorethemerrior_2.png">
-          <img class="img six" src="https://hancastanedo.com/assets/haenyo/haenyo_springindc.png">
-          <img class="img seven" src="https://hancastanedo.com/assets/haenyo/Haenyo-PekoPekoRamen.png">
+          <img class="img one" src="../assets/haenyo/haenyo-documentation-bigbear-dc.png">
+          <img class="img two" src="../assets/haenyo/haenyo-documentation-bmore.png">
+          <img class="img three" src="../assets/haenyo/haenyo-documentation-bigbear-menu.png">
+          <img class="img four" src="../assets/haenyo/haenyo-documentation-businesscards.png">
+          <img class="img five" src="../assets/haenyo/haenyo-documentation-rye.png">
+          <img class="img six" src="../assets/haenyo/haenyo-documentation-bigbear.png">
+          <img class="img seven" src="../assets/haenyo/haenyo-documentation-chasest.png">
         </div>
       <div class="portfolio-info">
-        <h2>haenyo</h2>
-        <p>haenyo is a colorful Korean pop-up food venture started by Irvin Seo and Collin Morstein. We developed the haenyo identity to be a flexible visual system so that we could incorporate some of the flavor of the restaurants that graciously hosted us while still maintaining a recognizable presence. The pop-up has executed over 50 dinners since its inception in 2017.
+        <h2>A Colorful Korean Pop-Up.</h2>
+        <p>haenyo is a Korean pop-up food venture started by Irvin Seo and Collin Morstein. We developed the haenyo identity to be a flexible visual system so that we could incorporate some of the flavor of the restaurants that graciously hosted us while still maintaining a recognizable presence. The pop-up has executed over 50 dinners since its inception in 2017.
         </p>
       </div>
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_3">
         <div class="portfolio-title">
-          <div class="item pilon"></div>
-          <div class="number">3/8</div>
+          <div class="item"><h1>Pilon</h1></div>
+          <div class="number"><h1>3/8</h1></div>
         </div>
-        <div class="vid-container">
-          <div class="vid-container-2">
-            <img class="screen-top" src="assets/screentop.svg">
-            <video autoplay muted loop>
-              <source src="https://hancastanedo.com/assets/pilon/pilon-test-4.mp4" type="video/mp4" />
-            </video>
+        <div class="img-container">
+            <img class="img one" src="../assets/pilon/pilon-blog-internal.png">
+            <img class="img two" src="../assets/pilon/pilon-documentation.png">
+            <img class="img three" src="../assets/pilon/pilon-microsite-web.gif">
           </div>
-        </div>
       <div class="portfolio-info">
-        <h2>Pilon</h2>
+        <h2>API-First E-Commerce.</h2>
         <p>As a headless API-first e-commerce product, it was important that Pilon’s microsite appealed to advanced developers in the field. With this in mind, the design needed to be based around interactive visual elements, like the animated gradient background, to emphasize lightweight technology that’s easy to use. Take a look at <a href="https://pilon.io/">pilon.io</a>
         </p>
       </div>
@@ -83,111 +81,113 @@
     </section>
     <section class="portfolio-container box_4">
         <div class="portfolio-title">
-          <div class="item scratchmade"></div>
-          <div class="number">4/8</div>
+          <div class="item"><h1>ScratchMade</h1></div>
+          <div class="number"><h1>4/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/scratchmade/scratchmade-flyer.png">
-          <img class="img two" src="https://hancastanedo.com/assets/scratchmade/scratchmade-5x7-postcard.png">
-          <img class="img three" src="https://hancastanedo.com/assets/scratchmade/scratchmade-menu-July23.jpg">
+          <img class="img one" src="../assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
+          <img class="img two" src="../assets/scratchmade/scratchmade-documentation.png">
+          <img class="img three" src="../assets/scratchmade/scratchmade-social-menu.png">
         </div>
       <div class="portfolio-info">
-        <h2>ScratchMade</h2>
-        <p>Collin Morstein and Irvin Seo expanded their skills in the kitchen beyond their pop-up dinners  by creating a meal service with a plethora of options, all made from scratch. We created an identity and design system that drew inspiration from antique Italian and Russian recipe cards. We set out to create something playful and injected with some humor. Currently designing an online ordering system to be released in the fall of 2018.
+        <h2>Time-Tested Dishes, Delivered.</h2>
+        <p>Collin Morstein and Irvin Seo expanded their skills in the kitchen beyond their pop-up dinners by creating a meal service with a plethora of options, all made from scratch. We created an identity and design system that drew inspiration from antique Italian and Russian recipe cards. We set out to create something playful and injected with some humor.
         </p>
       </div>
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_5">
         <div class="portfolio-title">
-          <div class="item noonas"></div>
-          <div class="number">5/8</div>
+          <div class="item"><h1>Noona's</h1></div>
+          <div class="number"><h1>5/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/noonas/Noonas_Logo_Full.png">
+          <img class="img one" src="../assets/noonas/noonas_menumockup.png">
           <img class="img two" src="https://hancastanedo.com/assets/noonas/noonas_styleguide.png">
           <img class="img three" src="https://hancastanedo.com/assets/noonas/noonas_signagemockup.png">
+          <img class="img four" src="https://hancastanedo.com/assets/noonas/Noonas_Logo_Full.png">
         </div>
         <div class="portfolio-info">
-        <h2>Noona's</h2>
-        <p>Noona is the Korean word for “older sister” and a references a special relationship between siblings and food. The illustration and handwritten script typography evoke fun and light-hearted childhood memories of pizza. Full designed menu and opening poster coming soon. <em>Grand opening winter 2018.</em>
+        <h2>Your Neighborhood Pizza Bar.</h2>
+        <p>Noona is the Korean word for “older sister” and a references a special relationship between siblings and food. The illustration and handwritten script typography evoke fun and light-hearted childhood memories of pizza. Full designed menu and opening poster coming soon. Grand opening winter 2018.
       </div>
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_6">
         <div class="portfolio-title">
-          <div class="item urbanteachers"></div>
-          <div class="number">6/8</div>
+          <div class="item"><h1>Urban Teachers</h1></div>
+          <div class="number"><h1>6/8</h1></div>
         </div>
-        <div class="vid-container">
+        <div class="img-container">
           <div class="vid-container-2">
-            <img class="screen-top" src="assets/screentop.svg">
-            <video autoplay muted loop>
-              <source src="https://hancastanedo.com/assets/urbanteachers/UrbanTeachers-HomepageAnimation.mov" type="video/mp4" />
-            </video>
+            <img class="img one" src="../assets/urbanteachers/ut-teaching-terms-campaign.png">
+            <img class="img two" src="../assets/urbanteachers/ut-onesheetsample.png">
+            <img class="img three" src="../assets/urbanteachers/UT-Website-Scroll.gif">
           </div>
         </div>
       <div class="portfolio-info">
-        <h2>Urban Teachers</h2>
-        <p>For this <a href="https://urbanteachers.org/">project</a>, I built all of the the front-end development with the goal of maintaining the integrity of the original flats and assets (designed by Christopher)  This website was built from scratch, utilizing relative units instead of solid pixels, with CSS grids to keep the site light and responsive to emphasize the clean design.
+        <h2>Change Starts in the Classroom.</h2>
+        <p>Urban Teachers works on preparing teachers to work in inner city and urban schools. Our partnership set the goal to unify their existing brand elements, push new ideas, and work their ideologies into strong print, video, web campaigns.
         </p>
       </div>
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_7">
         <div class="portfolio-title">
-          <div class="item foodshed"></div>
-          <div class="number">7/8</div>
+          <div class="item"><h1>Foodshed</h1></div>
+          <div class="number"><h1>7/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/foodshed/stuffing_starter_kit.png">
-          <img class="img two" src="https://hancastanedo.com/assets/foodshed/P-L-hoppin-john-kit-01_1340_c.jpg">
-          <img class="img three" src="https://hancastanedo.com/assets/foodshed/cj-bandposter-sketch.jpg">
-          <img class="img four" src="https://hancastanedo.com/assets/foodshed/AC-union-graze-2016-02_1340_c.jpg">
+          <img class="img one" src="../assets/foodshed/pl-stuffing-starter-kit.png">
+          <img class="img two" src="../assets/foodshed/foodshed-social-documentation.png">
+          <img class="img three" src="../assets/foodshed/foodshed-flyer-documentation.png">
         </div>
         <div class="portfolio-info">
-          <h2>Foodshed</h2>
+          <h2>The Best from the Chesapeake Watershed.</h2>
           <p>Foodshed (founded by chef Spike Gjerde) is a Baltimore based restaurant group, consisting of: Artifact Coffee, Woodberry Kitchen, Parts & Labor, Grand Cru, and Bird in Hand. I worked in-house and directly with chefs and managers to design all material for events, menus, social presence, and retail packing within individual restaurant brand guidelines.
       </div>
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_8">
         <div class="portfolio-title">
-          <div class="item onion"></div>
-          <div class="number">8/8</div>
+          <div class="item"><h1>Small Projects</h1></div>
+          <div class="number"><h1>8/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/smallprojects/no-human-being-is-illegal.png">
-          <img class="img two" src="https://hancastanedo.com/assets/smallprojects/talldrink.png">
-          <img class="img three" src="https://hancastanedo.com/assets/smallprojects/Doobys5YearLotParty-8.5x11.png">
-          <img class="img four" src="https://hancastanedo.com/assets/smallprojects/conjunto-bruja-B.png">
-          <img class="img five" src="https://hancastanedo.com/assets/smallprojects/BodySlam-Y.png">
+          <img class="img one" src="../assets/smallprojects/psw-card-documentation.png">
+          <img class="img two" src="../assets/smallprojects/doobys-5year-documentation.png">
+          <img class="img three" src="../assets/smallprojects/conjunto-bruja-documentation.png">
+          <img class="img four" src="../assets/smallprojects/illustrations-documentation.png">
+          <img class="img five" src="../assets/smallprojects/fcl-documentation.png">
         </div>
       <div class="portfolio-info">
-        <h2>Small Projects</h2>
+        <h2>Just for fun.</h2>
         <p>Smaller freelance illustration and design projects have often been the start of relationships that turn into the most fulfilling projects I’ve had the pleasure of working on.
       </div>
     </section>
-    <section id="about">
-      <div class="profile">
-        <div class="circle"></div>
-        <img class="img profile-img" src="https://hancastanedo.com/assets/selfportrait-2018.svg">
+    <section id="about" class="info-container">
+      <div class="portfolio-title">
+        <div class="item"><h1>info</h1></div>
+        <div class="info-header"><div class="line"></div></div>
+        <div class="number"><h1>🧡</h1></div>
+        </div>
+      <div class="img-container">
+        <div class="img circle three"></div>
+        <img class="img four profile-img" src="https://hancastanedo.com/assets/selfportrait-2018.svg">
       </div>
-      <div class="line-2"></div>
-      <div class="bio">
+      <div class="portfolio-info">
         <div class="greeting"></div>
-        <p>I’m a Latinx multidisciplinary designer and illustrator currently living and working out of Baltimore, MD. My current obsession has been learning to build with code. I'm originally from Southern California and moved to Baltimore to attend MICA, where I graduated in 2015. I currently work at Kapowza as an Interactive Designer.
+        <p>I’m a Latinx multidisciplinary designer and illustrator currently living and working out of Baltimore, MD. My current focus has been learning to build with code.
 </p>
 <p class="hobbies">
 When I’m not working, I stay busy by reading <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/calabi-yau.png">physics articles,</a> <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/wanda_sander.jpg">powerlifting,</a> and <a href="#" class="revealImage" data-src="https://hancastanedo.com/assets/about/tamales.jpg">cooking Ecuadorian food</a>. My ideal weekend is eating a huge bowl of Phở and watching <a href="#" class="revealImage" data-src="https://media.giphy.com/media/eggkOyfpyWweI/giphy.gif">Curb Your Enthusiasm.</a>
         </p>
         <p>If you'd like to get in touch, feel free to <a href="mailto:han.castanedo@gmail.com">email</a> me or follow me on <a href="https://www.instagram.com/han.castanedo/">Instagram</a> and <a href="https://github.com/hancas">GitHub</a>.</p>
-        <h6>This site was designed & coded from scratch. No templates, just learning.</h6>
       </div>
     </section>
   <footer id="ftr">
       <h1>han castanedo</h1>
-      <button id="example-three" data-text-swap="x">about</button>
+      <button id="example-three" data-text-swap="back">info</button>
   </footer>
   <script src="js/desktop.js"></script>
   <script src="js/time-greeting.js"></script>
