--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <meta lang="en-US">
     <title>Han Castanedo</title>
-    <!--<link href="https://hancastanedo.com/css/main.css" rel="stylesheet">-->
-    <link href="css/main.css" rel="stylesheet">
+    <link href="https://hancastanedo.com/css/main.css" rel="stylesheet">
     <link href="//cloud.typenetwork.com/projects/2953/fontface.css/" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
@@ -47,13 +46,13 @@
         </div>
         </div>
         <div class="img-container">
-          <img class="img one" src="../assets/haenyo/haenyo-documentation-bigbear-dc.png">
-          <img class="img two" src="../assets/haenyo/haenyo-documentation-bmore.png">
-          <img class="img three" src="../assets/haenyo/haenyo-documentation-bigbear-menu.png">
-          <img class="img four" src="../assets/haenyo/haenyo-documentation-businesscards.png">
-          <img class="img five" src="../assets/haenyo/haenyo-documentation-rye.png">
-          <img class="img six" src="../assets/haenyo/haenyo-documentation-bigbear.png">
-          <img class="img seven" src="../assets/haenyo/haenyo-documentation-chasest.png">
+          <img class="img one" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear-dc.png">
+          <img class="img two" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bmore.png">
+          <img class="img three" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear-menu.png">
+          <img class="img four" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-businesscards.png">
+          <img class="img five" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-rye.png">
+          <img class="img six" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear.png">
+          <img class="img seven" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-chasest.png">
         </div>
       <div class="portfolio-info">
         <h2>A Colorful Korean Pop-Up.</h2>
@@ -68,9 +67,9 @@
           <div class="number"><h1>3/8</h1></div>
         </div>
         <div class="img-container">
-            <img class="img one" src="../assets/pilon/pilon-blog-internal.png">
-            <img class="img two" src="../assets/pilon/pilon-documentation.png">
-            <img class="img three" src="../assets/pilon/pilon-microsite-web.gif">
+            <img class="img one" src="https://hancastanedo.com/assets/pilon/pilon-blog-internal.png">
+            <img class="img two" src="https://hancastanedo.com/assets/pilon/pilon-documentation.png">
+            <img class="img three" src="https://hancastanedo.com/assets/pilon/pilon-microsite-web.gif">
           </div>
       <div class="portfolio-info">
         <h2>API-First E-Commerce.</h2>
@@ -85,9 +84,9 @@
           <div class="number"><h1>4/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="../assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
-          <img class="img two" src="../assets/scratchmade/scratchmade-documentation.png">
-          <img class="img three" src="../assets/scratchmade/scratchmade-social-menu.png">
+          <img class="img one" src="https://hancastanedo.com/assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
+          <img class="img two" src="https://hancastanedo.com/assets/scratchmade/scratchmade-documentation.png">
+          <img class="img three" src="https://hancastanedo.com/assets/scratchmade/scratchmade-social-menu.png">
         </div>
       <div class="portfolio-info">
         <h2>Time-Tested Dishes, Delivered.</h2>
@@ -102,7 +101,7 @@
           <div class="number"><h1>5/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="../assets/noonas/noonas_menumockup.png">
+          <img class="img one" src="https://hancastanedo.com/assets/noonas/noonas_menumockup.png">
           <img class="img two" src="https://hancastanedo.com/assets/noonas/noonas_styleguide.png">
           <img class="img three" src="https://hancastanedo.com/assets/noonas/noonas_signagemockup.png">
           <img class="img four" src="https://hancastanedo.com/assets/noonas/Noonas_Logo_Full.png">
@@ -120,9 +119,9 @@
         </div>
         <div class="img-container">
           <div class="vid-container-2">
-            <img class="img one" src="../assets/urbanteachers/ut-teaching-terms-campaign.png">
-            <img class="img two" src="../assets/urbanteachers/ut-onesheetsample.png">
-            <img class="img three" src="../assets/urbanteachers/UT-Website-Scroll.gif">
+            <img class="img one" src="https://hancastanedo.com/assets/urbanteachers/ut-teaching-terms-campaign.png">
+            <img class="img two" src="https://hancastanedo.com/assets/urbanteachers/ut-onesheetsample.png">
+            <img class="img three" src="https://hancastanedo.com/assets/urbanteachers/UT-Website-Scroll.gif">
           </div>
         </div>
       <div class="portfolio-info">
@@ -138,9 +137,9 @@
           <div class="number"><h1>7/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="../assets/foodshed/pl-stuffing-starter-kit.png">
-          <img class="img two" src="../assets/foodshed/foodshed-social-documentation.png">
-          <img class="img three" src="../assets/foodshed/foodshed-flyer-documentation.png">
+          <img class="img one" src="https://hancastanedo.com/assets/foodshed/pl-stuffing-starter-kit.png">
+          <img class="img two" src="https://hancastanedo.com/assets/foodshed/foodshed-social-documentation.png">
+          <img class="img three" src="https://hancastanedo.com/assets/foodshed/foodshed-flyer-documentation.png">
         </div>
         <div class="portfolio-info">
           <h2>The Best from the Chesapeake Watershed.</h2>
@@ -154,11 +153,11 @@
           <div class="number"><h1>8/8</h1></div>
         </div>
         <div class="img-container">
-          <img class="img one" src="../assets/smallprojects/psw-card-documentation.png">
-          <img class="img two" src="../assets/smallprojects/doobys-5year-documentation.png">
-          <img class="img three" src="../assets/smallprojects/conjunto-bruja-documentation.png">
-          <img class="img four" src="../assets/smallprojects/illustrations-documentation.png">
-          <img class="img five" src="../assets/smallprojects/fcl-documentation.png">
+          <img class="img one" src="https://hancastanedo.com/assets/smallprojects/psw-card-documentation.png">
+          <img class="img two" src="https://hancastanedo.com/assets/smallprojects/doobys-5year-documentation.png">
+          <img class="img three" src="https://hancastanedo.com/assets/smallprojects/conjunto-bruja-documentation.png">
+          <img class="img four" src="https://hancastanedo.com/assets/smallprojects/illustrations-documentation.png">
+          <img class="img five" src="https://hancastanedo.com/assets/smallprojects/fcl-documentation.png">
         </div>
       <div class="portfolio-info">
         <h2>Just for fun.</h2>
