remove portfolio-title for individual sections

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="path/to/intersection-observer.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -21,14 +22,11 @@
       <p>loading...</p>
     </section>
     <header>
+      <div class="portfolio-title"><h1>hello!</h1></div>
       <div class="line"></div>
+      <div class="number"><h1>1/8</h1></div>
     </header>
     <section class="portfolio-container box_1">
-            <div class="portfolio-title">
-              <div class="item"><h1>hello!</h1></div>
-              <div class="number"><h1>1/8</h1></div>
-              </div>
-            </div>
             <div class="marquee">
               <div class="push"></div>
             </div>
@@ -40,11 +38,6 @@
           <div class="scrl-ind"></div>
         </section>
     <section class="portfolio-container box_2">
-        <div class="portfolio-title">
-          <div class="item"><h1>haenyo</h1></div>
-          <div class="number"><h1>2/8</h1></div>
-        </div>
-        </div>
         <div class="img-container">
           <img class="img one" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear-dc.png">
           <img class="img two" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bmore.png">
@@ -62,10 +55,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_3">
-        <div class="portfolio-title">
-          <div class="item"><h1>Pilon</h1></div>
-          <div class="number"><h1>3/8</h1></div>
-        </div>
         <div class="img-container">
             <img class="img one" src="https://hancastanedo.com/assets/pilon/pilon-blog-internal.png">
             <img class="img two" src="https://hancastanedo.com/assets/pilon/pilon-documentation.png">
@@ -79,10 +68,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_4">
-        <div class="portfolio-title">
-          <div class="item"><h1>ScratchMade</h1></div>
-          <div class="number"><h1>4/8</h1></div>
-        </div>
         <div class="img-container">
           <img class="img one" src="https://hancastanedo.com/assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
           <img class="img two" src="https://hancastanedo.com/assets/scratchmade/scratchmade-documentation.png">
@@ -96,10 +81,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_5">
-        <div class="portfolio-title">
-          <div class="item"><h1>Noona's</h1></div>
-          <div class="number"><h1>5/8</h1></div>
-        </div>
         <div class="img-container">
           <img class="img one" src="https://hancastanedo.com/assets/noonas/noonas_menumockup.png">
           <img class="img two" src="https://hancastanedo.com/assets/noonas/noonas_styleguide.png">
@@ -113,10 +94,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_6">
-        <div class="portfolio-title">
-          <div class="item"><h1>Urban Teachers</h1></div>
-          <div class="number"><h1>6/8</h1></div>
-        </div>
         <div class="img-container">
           <div class="vid-container-2">
             <img class="img one" src="https://hancastanedo.com/assets/urbanteachers/ut-teaching-terms-campaign.png">
@@ -132,10 +109,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_7">
-        <div class="portfolio-title">
-          <div class="item"><h1>Foodshed</h1></div>
-          <div class="number"><h1>7/8</h1></div>
-        </div>
         <div class="img-container">
           <img class="img one" src="https://hancastanedo.com/assets/foodshed/pl-stuffing-starter-kit.png">
           <img class="img two" src="https://hancastanedo.com/assets/foodshed/foodshed-social-documentation.png">
@@ -148,10 +121,6 @@
       <div class="scrl-ind"></div>
     </section>
     <section class="portfolio-container box_8">
-        <div class="portfolio-title">
-          <div class="item"><h1>Small Projects</h1></div>
-          <div class="number"><h1>8/8</h1></div>
-        </div>
         <div class="img-container">
           <img class="img one" src="https://hancastanedo.com/assets/smallprojects/psw-card-documentation.png">
           <img class="img two" src="https://hancastanedo.com/assets/smallprojects/doobys-5year-documentation.png">
