remove delay scroll, replace images with smaller file sizes

--- a/index.html
+++ b/index.html
@@ -3,13 +3,12 @@
   <head>
     <meta charset="UTF-8">
     <meta lang="en-US">
-    <title>Han Castanedo</title>
+    <title>Han Castanedo 🧡 Designer</title>
     <link href="css/main.css" rel="stylesheet">
     <link href="//cloud.typenetwork.com/projects/2953/fontface.css/" rel="stylesheet" type="text/css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="js/loading.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-    <script src="path/to/intersection-observer.js"></script>
     <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
@@ -22,9 +21,9 @@
       <p>loading...</p>
     </section>
     <header>
-      <div class="portfolio-title"><h1>hello!</h1></div>
+      <div><h1 class="portfolio-title"></h1></div>
       <div class="line"></div>
-      <div class="number"><h1>1/8</h1></div>
+      <div><h1 class="number"></h1></div>
     </header>
     <section class="portfolio-container box_1">
             <div class="marquee">
@@ -39,13 +38,13 @@
         </section>
     <section class="portfolio-container box_2">
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear-dc.png">
-          <img class="img two" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bmore.png">
-          <img class="img three" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear-menu.png">
-          <img class="img four" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-businesscards.png">
-          <img class="img five" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-rye.png">
-          <img class="img six" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-bigbear.png">
-          <img class="img seven" src="https://hancastanedo.com/assets/haenyo/haenyo-documentation-chasest.png">
+          <img class="img one" src="assets/haenyo/haenyo-documentation-bigbear-dc.png">
+          <img class="img two" src="assets/haenyo/haenyo-documentation-bmore.png">
+          <img class="img three" src="assets/haenyo/haenyo-documentation-bigbear-menu.png">
+          <img class="img four" src="assets/haenyo/haenyo-documentation-businesscards.png">
+          <img class="img five" src="assets/haenyo/haenyo-documentation-rye.png">
+          <img class="img six" src="assets/haenyo/haenyo-documentation-bigbear.png">
+          <img class="img seven" src="assets/haenyo/haenyo-documentation-chasest.png">
         </div>
       <div class="portfolio-info">
         <h2>A Colorful Korean Pop-Up.</h2>
@@ -56,9 +55,9 @@
     </section>
     <section class="portfolio-container box_3">
         <div class="img-container">
-            <img class="img one" src="https://hancastanedo.com/assets/pilon/pilon-blog-internal.png">
-            <img class="img two" src="https://hancastanedo.com/assets/pilon/pilon-documentation.png">
-            <img class="img three" src="https://hancastanedo.com/assets/pilon/pilon-microsite-web.gif">
+            <img class="img one" src="assets/pilon/pilon-blog-internal.png">
+            <img class="img two" src="assets/pilon/pilon-documentation.png">
+            <img class="img three" src="assets/pilon/pilon-microsite-web.gif">
           </div>
       <div class="portfolio-info">
         <h2>API-First E-Commerce.</h2>
@@ -69,9 +68,9 @@
     </section>
     <section class="portfolio-container box_4">
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
-          <img class="img two" src="https://hancastanedo.com/assets/scratchmade/scratchmade-documentation.png">
-          <img class="img three" src="https://hancastanedo.com/assets/scratchmade/scratchmade-social-menu.png">
+          <img class="img one" src="assets/scratchmade/scratchmade-2raisin-lighttaupe.png">
+          <img class="img two" src="assets/scratchmade/scratchmade-documentation.png">
+          <img class="img three" src="assets/scratchmade/scratchmade-social-menu.png">
         </div>
       <div class="portfolio-info">
         <h2>Time-Tested Dishes, Delivered.</h2>
@@ -82,10 +81,10 @@
     </section>
     <section class="portfolio-container box_5">
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/noonas/noonas_menumockup.png">
-          <img class="img two" src="https://hancastanedo.com/assets/noonas/noonas_styleguide.png">
-          <img class="img three" src="https://hancastanedo.com/assets/noonas/noonas_signagemockup.png">
-          <img class="img four" src="https://hancastanedo.com/assets/noonas/Noonas_Logo_Full.png">
+          <img class="img one" src="assets/noonas/noonas_menumockup.png">
+          <img class="img two" src="assets/noonas/noonas_styleguide.png">
+          <img class="img three" src="assets/noonas/noonas_signagemockup.png">
+          <img class="img four" src="assets/noonas/Noonas_Logo_Full.png">
         </div>
         <div class="portfolio-info">
         <h2>Your Neighborhood Pizza Bar.</h2>
@@ -96,9 +95,9 @@
     <section class="portfolio-container box_6">
         <div class="img-container">
           <div class="vid-container-2">
-            <img class="img one" src="https://hancastanedo.com/assets/urbanteachers/ut-teaching-terms-campaign.png">
-            <img class="img two" src="https://hancastanedo.com/assets/urbanteachers/ut-onesheetsample.png">
-            <img class="img three" src="https://hancastanedo.com/assets/urbanteachers/UT-Website-Scroll.gif">
+            <img class="img one" src="assets/urbanteachers/ut-teaching-terms-campaign.png">
+            <img class="img two" src="assets/urbanteachers/ut-onesheetsample.png">
+            <img class="img three" src="assets/urbanteachers/UT-Website-Scroll.gif">
           </div>
         </div>
       <div class="portfolio-info">
@@ -110,9 +109,9 @@
     </section>
     <section class="portfolio-container box_7">
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/foodshed/pl-stuffing-starter-kit.png">
-          <img class="img two" src="https://hancastanedo.com/assets/foodshed/foodshed-social-documentation.png">
-          <img class="img three" src="https://hancastanedo.com/assets/foodshed/foodshed-flyer-documentation.png">
+          <img class="img one" src="assets/foodshed/pl-stuffing-starter-kit.png">
+          <img class="img two" src="assets/foodshed/foodshed-social-documentation.png">
+          <img class="img three" src="assets/foodshed/foodshed-flyer-documentation.png">
         </div>
         <div class="portfolio-info">
           <h2>The Best from the Chesapeake Watershed.</h2>
@@ -122,26 +121,21 @@
     </section>
     <section class="portfolio-container box_8">
         <div class="img-container">
-          <img class="img one" src="https://hancastanedo.com/assets/smallprojects/psw-card-documentation.png">
-          <img class="img two" src="https://hancastanedo.com/assets/smallprojects/doobys-5year-documentation.png">
-          <img class="img three" src="https://hancastanedo.com/assets/smallprojects/conjunto-bruja-documentation.png">
-          <img class="img four" src="https://hancastanedo.com/assets/smallprojects/illustrations-documentation.png">
-          <img class="img five" src="https://hancastanedo.com/assets/smallprojects/fcl-documentation.png">
+          <img class="img one" src="assets/smallprojects/psw-card-documentation.png">
+          <img class="img two" src="assets/smallprojects/doobys-5year-documentation.png">
+          <img class="img three" src="assets/smallprojects/conjunto-bruja-documentation.png">
+          <img class="img four" src="assets/smallprojects/illustrations-documentation.png">
+          <img class="img five" src="assets/smallprojects/fcl-documentation.png">
         </div>
       <div class="portfolio-info">
         <h2>Just for fun.</h2>
         <p>Smaller freelance illustration and design projects have often been the start of relationships that turn into the most fulfilling projects I’ve had the pleasure of working on.
       </div>
     </section>
-    <section id="about" class="info-container">
-      <div class="portfolio-title">
-        <div class="item"><h1>info</h1></div>
-        <div class="info-header"><div class="line"></div></div>
-        <div class="number"><h1>🧡</h1></div>
-        </div>
+    <section class="about info-container">
       <div class="img-container">
         <div class="img circle three"></div>
-        <img class="img four profile-img" src="https://hancastanedo.com/assets/selfportrait-2018.svg">
+        <img class="img four profile-img" src="assets/selfportrait-2018.svg">
       </div>
       <div class="portfolio-info">
         <div class="greeting"></div>
@@ -157,7 +151,9 @@ When I’m not working, I stay busy by reading <a href="#" class="revealImage" d
       <h1>han castanedo</h1>
       <button id="example-three" data-text-swap="back">info</button>
   </footer>
+  <script src="js/jquery.waypoints.min.js"></script>
   <script src="js/desktop.js"></script>
+  <script src="js/header-test.js"></script>
   <script src="js/time-greeting.js"></script>
   <script src="js/about.js"></script>
   <script src="js/mouse-image.js"></script>
